--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -11,6 +11,8 @@
             <div class="col">
                 <h1> This is the about page </h1>
                 <p> This is some text </p>
+
+                <p> This came from the template: {{index .StringMap "test"}} </p>
             </div>
         </div>
     </div>
