Added sessions for users

--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -13,6 +13,13 @@
                 <p> This is some text </p>
 
                 <p> This came from the template: {{index .StringMap "test"}} </p>
+                <p> 
+                    {{if ne (index .StringMap "remote_ip") ""}}
+                        Your  remote IP is {{index .StringMap "remote_ip"}}
+                    {{else}}
+                        Your remote IP is unknown yet. Visit the <a href="/">Home</a> page to find out.
+                    {{end}}
+                </p>
             </div>
         </div>
     </div>
